# SimpleMeme

./: .gitignore  README-zh_CN.md  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/release/: output.json
app/src/androidTest/java/com/ironsublimate/mememanager/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/ironsublimate/simplememe/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: litepal.xml
app/src/main/java/com/ironsublimate/mememanager/: GlobalConfig.java  MyApplication.java  MyDataBase.java  MySharePreference.java  QuickService.java
app/src/main/java/com/ironsublimate/simplememe/: GlobalConfig.java  MyApplication.java  MyDataBase.java  MySharePreference.java  QuickService.java
app/src/main/jni/: CMakeLists.txt  paddleocr_ncnn.cpp
app/src/main/res/layout/: activity_about.xml  activity_base.xml  activity_error.xml  activity_exp_folder_detail.xml  activity_exp_local_folder_detail.xml  activity_main.xml  activity_my.xml  activity_result.xml  activity_shop.xml  activity_welcom.xml  content_base.xml  fragment_expression_content.xml  fragment_main.xml  guide_view.xml  item_empty_view.xml  item_empty_view2.xml  item_exp_my.xml  item_exp_shop.xml  item_expression.xml  item_show_expression.xml  loading_view.xml  share_one_sreenshot.xml
app/src/main/res/menu/: menu_local_detail.xml
app/src/main/res/values/: dimens.xml  strings.xml
app/src/main/res/xml/: provider_paths.xml
gradle/wrapper/: gradle-wrapper.properties
(+148 files in other folders)
